--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - run:
           command: |
             pip install pytest
-            pytest --junitxml=test-results/junit.xml Test_Triangle.py
+            pytest --junitxml=test-results/junit.xml Test_triangle.py
       - store_test_results:
           path: test-results
 
